rename view nfts command

--- a/static/json/languages/en_US.json
+++ b/static/json/languages/en_US.json
@@ -396,7 +396,7 @@
         "my_tokens": "My Tokens",
         "my_tokens_watched": "Tokens",
         "copy_address": "Copy Address",
-        "view_nfts": "View NFTs",
+        "view_profile": "View Rainbow Profile",
         "add_wallet": "Add a Wallet",
         "lock": "Lock Rainbow",
         "connected_apps": "Connected Apps",
@@ -440,7 +440,7 @@
         "swap": "bridge",
         "my_wallets": "switch",
         "my_tokens_watched": "my",
-        "view_nfts": "gallery, profile",
+        "view_profile": "nfts, gallery, profile",
         "testnet_mode": "toggle, networks, testnets",
         "developer_tools": "toggle, networks, developer, testnets",
         "settings": "preferences",
