feat: my_nfts search drill down

--- a/static/json/languages/en_US.json
+++ b/static/json/languages/en_US.json
@@ -395,6 +395,7 @@
         "my_wallets": "My Wallets",
         "my_tokens": "My Tokens",
         "my_tokens_watched": "Tokens",
+        "my_nfts": "My NFTs",
         "copy_address": "Copy Address",
         "view_profile": "View Rainbow Profile",
         "add_wallet": "Add a Wallet",
