fix: my_nfts selected wallet

--- a/static/json/languages/en_US.json
+++ b/static/json/languages/en_US.json
@@ -396,6 +396,7 @@
         "my_tokens": "My Tokens",
         "my_tokens_watched": "Tokens",
         "my_nfts": "My NFTs",
+        "my_nfts_watched": "NFTs",
         "copy_address": "Copy Address",
         "view_profile": "View Rainbow Profile",
         "add_wallet": "Add a Wallet",
@@ -441,7 +442,7 @@
         "swap": "bridge",
         "my_wallets": "switch",
         "my_tokens_watched": "my",
-        "my_nfts": "my, nfts",
+        "my_nfts_watched": "my",
         "view_profile": "nfts, gallery, profile",
         "testnet_mode": "toggle, networks, testnets",
         "developer_tools": "toggle, networks, developer, testnets",
