enable disable network

--- a/static/json/languages/en_US.json
+++ b/static/json/languages/en_US.json
@@ -118,6 +118,7 @@
         "network_added_correctly": "%{networkName} has been added correctly!",
         "remove_token": "Remove Token",
         "remove_rpc": "Remove RPC",
+        "remove_network": "Remove Network",
         "tokens": "Tokens",
         "cant_connect": "Can't connect to this RPC endpoint!",
         "rpc_not_responding": "The provided url is not responding"
