--- a/static/json/languages/en_US.json
+++ b/static/json/languages/en_US.json
@@ -251,10 +251,7 @@
       "full_watching_wallets": "Full Access to Watched Wallets",
       "hw_wallets_enabled": "Enable Hardware Wallet Support",
       "command_k_internal_shortcuts_enabled": "Enable ⌘K Internal Shortcuts",
-      "custom_rpc": "Custom RPC",
-      "new_tab_bar_enabled": "New Tab Bar",
-      "nfts_enabled": "NFTs Enabled",
-      "points": "Points"
+      "custom_rpc": "Custom RPC"
     }
   },
   "transactions": {
