--- a/static/json/languages/en_US.json
+++ b/static/json/languages/en_US.json
@@ -1234,6 +1234,7 @@
     "sort_option_abc": "Abc",
     "sort_option_recent_long": "Recent",
     "sort_option_abc_long": "Alphabetical",
+    "hidden_section_title": "Hidden",
     "details": {
       "last_sales_price": "Last Sale Price",
       "none": "None",
@@ -1246,6 +1247,8 @@
       "token_contract": "Token Contract",
       "contract_creator": "Contract Creator",
       "chain": "Chain",
+      "hide": "Hide",
+      "unhide": "Unhide",
       "id_copied": "ID Copied",
       "copy_token_id": "Copy Token ID",
       "download": "Download",
