--- a/static/json/languages/en_US.json
+++ b/static/json/languages/en_US.json
@@ -1637,6 +1637,7 @@
   "nonce": "Nonce",
   "copy": "Copy",
   "copy_link": "Copy Link",
+  "link_text": "Learn More.",
   "close": "Close",
   "verified": "Verified",
   "unverified": "Unverified",
