--- a/static/json/languages/en_US.json
+++ b/static/json/languages/en_US.json
@@ -231,7 +231,7 @@
       "use_flashbots": "Use Flashbots",
       "clear_transactions_and_nonces": "Clear Pending Transactions",
       "clear_transactions_and_nonces_success": "Pending transactions cleared",
-      "flashbots_description": "Flashbots protects your transactions and reduces the likelihood of transaction failures. Learn more."
+      "flashbots_description": "Flashbots protects your transactions and reduces the likelihood of transaction failures. "
     },
     "currency": {
       "title": "Currency",
@@ -1623,6 +1623,7 @@
   "nonce": "Nonce",
   "copy": "Copy",
   "copy_link": "Copy Link",
+  "learn_more": "Learn more.",
   "close": "Close",
   "verified": "Verified",
   "unverified": "Unverified",
