feat: testnet faucet for tx out of gas state (#1252)

--- a/static/json/languages/en_US.json
+++ b/static/json/languages/en_US.json
@@ -1047,7 +1047,8 @@
     "request_rejected": "Transaction Request Rejected",
     "bridge_and_try_again": "Bridge some gas funds and try again",
     "buy_and_try_again": "Buy some gas funds and try again",
-    "buy": "Buy %{token}"
+    "buy_gas": "Buy %{token}",
+    "get_testnet_gas": "Get free testnet %{token}"
   },
   "add_chain": {
     "name": "Name",
