block add chain dupes

--- a/static/json/languages/en_US.json
+++ b/static/json/languages/en_US.json
@@ -1506,7 +1506,8 @@
     "network_changed": "Network changed",
     "network_changed_failed": "Network changed failed",
     "unsupported_network": "Unsupported network",
-    "no_active_session": "No active session"
+    "no_active_session": "No active session",
+    "already_added": "Network already added"
   },
   "alert": {
     "ok": "Ok",
