--- a/static/json/languages/en_US.json
+++ b/static/json/languages/en_US.json
@@ -1507,8 +1507,9 @@
     "network_changed_failed": "Network changed failed",
     "unsupported_network": "Unsupported network",
     "no_active_session": "No active session",
-    "already_added": "Network already added",
-    "set_as_active": "Network set as active"
+    "already_added": "RPC activated",
+    "set_as_active": "New RPC activated",
+    "already_active": "Network already added"
   },
   "alert": {
     "ok": "Ok",
