feat: add avalanche, avalancheFuji networks

--- a/static/json/languages/en_US.json
+++ b/static/json/languages/en_US.json
@@ -1463,7 +1463,7 @@
       },
       "bsc": {
         "title": "What's BSC?",
-        "description_1": "Binance Smart Chain, or BSC for short, is the blockchain network for the trading platform Binance.",
+        "description_1": "BNB Smart Chain, or BSC for short, is an alternative Layer 1 developed by the cryptocurrency exchange Binance.",
         "description_2": "It allows for cheaper and faster transactions, but unlike Layer 2 networks, BSC has its own security and consensus mechanisms that differ from Ethereum."
       },
       "base": {
@@ -1475,6 +1475,11 @@
         "title": "What's Zora?",
         "description_1": "Zora is a Layer 2 network that runs on top of Ethereum, enabling cheaper and faster transactions while still benefiting from the underlying security of Ethereum.",
         "description_2": "It bundles lots of transactions together in a \"roll up\" before sending them down to live permanently on Ethereum."
+      },
+      "avalanche": {
+        "title": "What's Avalanche?",
+        "description_1": "Avalanche is an alternative Layer 1 powered by an ecosystem of subnets, similar to Ethereum sidechains and Layer 2s.",
+        "description_2": "It allows for cheaper and faster transactions, but unlike Layer 2 networks, Avalanche has its own security and consensus mechanisms that differ from Ethereum."
       },
       "link_button_label": "Read more",
       "action_label": "Got it"
