Add Etherscan link to txn sim > details > contract (#1314)
Co-authored-by: Daniel Sinclair <d@niel.nyc>

--- a/static/json/languages/en_US.json
+++ b/static/json/languages/en_US.json
@@ -1383,6 +1383,7 @@
     "not_available": "Price not available",
     "more_options": {
       "copy_address": "Copy Address",
+      "view_on_explorer": "View on %{explorer}",
       "hide": "Hide Token",
       "report": "Report Token"
     },
