--- a/static/json/languages/en_US.json
+++ b/static/json/languages/en_US.json
@@ -1479,7 +1479,16 @@
     "choose_title": "Connect a hardware wallet",
     "ledger_support": "Supports Ledger Nano S, Nano S Plus, Nano X, and Stax devices.",
     "trezor_support": "Supports Model One or Model T devices.",
-    "gridplus_support": "Supports Lattice1.",
+    "gridplus_support": "Supports the GridPlus Lattice1 and SafeCards.",
+    "gridplus_device_id": "Device ID",
+    "gridplus_connect": "Connect",
+    "gridplus_password": "GridPlus Password",
+    "gridplus_pair_device": "Pair Device",
+    "gridplus_pairing_code": "Pairing Code",
+    "gridplus_wrong_code": "Wrong pairing code.",
+    "gridplus_check_device": "Check your Lattice1 device for the pairing secret.",
+    "gridplus_choose_addresses": "Choose Addresses",
+    "gridplus_export_addresses": "Export Addresses",
     "connect_ledger_title": "Connect your Ledger",
     "connect_ledger_description": "Connect your Ledger to Rainbow by plugging it into your computer using the USB-C cable.",
     "unlock_ledger_title": "Unlock Ledger",
