parsing asset to send with tx

--- a/static/json/languages/en_US.json
+++ b/static/json/languages/en_US.json
@@ -566,7 +566,8 @@
     "unlimited": "Unlimited",
     "no_allowance": "No Allowance",
     "revoke": {
-      "title": "Revoke"
+      "title": "Revoke",
+      "action": "Revoke %{tokenSymbol}"
     }
   },
   "send": {
