fix: follow on x

--- a/static/json/languages/en_US.json
+++ b/static/json/languages/en_US.json
@@ -77,7 +77,7 @@
     "contacts": "Contacts",
     "guides_and_support": "Guides & Support",
     "learn_about_ethereum": "Learn About Ethereum",
-    "follow_us_on_twitter": "Follow Us on Twitter",
+    "follow_us_on_x": "Follow us on X",
     "share_beta_feedback": "Share Beta Feedback",
     "theme": {
       "title": "Theme",
