--- a/static/json/languages/en_US.json
+++ b/static/json/languages/en_US.json
@@ -78,6 +78,7 @@
     "guides_and_support": "Guides & Support",
     "learn_about_ethereum": "Learn About Ethereum",
     "follow_us_on_x": "Follow us on X",
+    "follow_us_on_farcaster": "Follow us on Farcaster",
     "share_beta_feedback": "Share Beta Feedback",
     "theme": {
       "title": "Theme",
