fix: share feedback

--- a/static/json/languages/en_US.json
+++ b/static/json/languages/en_US.json
@@ -79,7 +79,7 @@
     "learn_about_ethereum": "Learn About Ethereum",
     "follow_us_on_x": "Follow us on X",
     "follow_us_on_farcaster": "Follow us on Farcaster",
-    "share_beta_feedback": "Share Beta Feedback",
+    "share_feedback": "Share Feedback",
     "theme": {
       "title": "Theme",
       "system": "System",
