chore(gridplus): improve onboarding ui

--- a/static/json/languages/en_US.json
+++ b/static/json/languages/en_US.json
@@ -1562,9 +1562,9 @@
     "needs_app_ledger_description": "The Ethereum app needs to be open on your Ledger to proced with the transaction.",
     "needs_app_ledger_description_2": "Enter your passcode to unlock your Ledger. Once unlocked, open the Ethereum app by pressing both buttons at once.",
     "connect_trezor_title": "Complete your Trezor set up",
-    "connect_gridplus_title": "Complete your Lattice1 set up",
+    "connect_gridplus_title": "Connect your Lattice1",
     "connect_trezor_description": "Continue to connect your Trezor to Rainbow through the web interface.",
-    "connect_gridplus_description": "Continue to connect your Lattice1 to Rainbow through the web interface.",
+    "connect_gridplus_description": "Connect your Lattice1 to Rainbow through the connection wizard.",
     "learn_more": "Learn more.",
     "connect_wallets_title": "Connect your wallets",
     "connect_wallets_found": "We’ve found %{count} wallets on your %{vendor} with a balance or activity. Select which to connect.",
