add cancel to revoke sheet

--- a/static/json/languages/en_US.json
+++ b/static/json/languages/en_US.json
@@ -567,7 +567,8 @@
     "no_allowance": "No Allowance",
     "revoke": {
       "title": "Review & Revoke",
-      "action": "Revoke"
+      "action": "Revoke",
+      "cancel": "Cancel"
     }
   },
   "send": {
