feat(gridplus): add informative labels for the onboarding

--- a/static/json/languages/en_US.json
+++ b/static/json/languages/en_US.json
@@ -1542,14 +1542,17 @@
     "trezor_support": "Supports Model One or Model T devices.",
     "gridplus_support": "Supports the GridPlus Lattice1 and SafeCards.",
     "gridplus_device_id": "Device ID",
+    "gridplus_device_id_description": "Get your Device ID from Lattice Home.",
     "gridplus_connect": "Connect",
     "gridplus_password": "GridPlus Password",
+    "gridplus_password_create": "If this is your first time logging in, create a new password.",
     "gridplus_pair_device": "Pair Device",
     "gridplus_pairing_code": "Pairing Code",
     "gridplus_wrong_code": "Wrong pairing code.",
     "gridplus_check_device": "Check your Lattice1 device for the pairing secret.",
     "gridplus_choose_addresses": "Choose Addresses",
-    "gridplus_export_addresses": "Export Addresses",
+    "gridplus_export_addresses": "Import Addresses",
+    "available_addresses": "Available Addresses",
     "connect_ledger_title": "Connect your Ledger",
     "connect_ledger_description": "Connect your Ledger to Rainbow by plugging it into your computer using the USB-C cable.",
     "unlock_ledger_title": "Unlock Ledger",
