--- a/static/json/languages/en_US.json
+++ b/static/json/languages/en_US.json
@@ -566,6 +566,8 @@
     "unlimited": "Unlimited",
     "no_allowance": "No Allowance",
     "revoke_approval": "Revoke Approval",
+    "copy_spender":"Copy Spender",
+    "spender_address_copied": "Spender Address Copied",
     "revoke": {
       "title": "Revoke Approval",
       "action": "Revoke",
