chore(gridplus): handle case of removed permissions in Lattice

--- a/static/json/languages/en_US.json
+++ b/static/json/languages/en_US.json
@@ -1542,7 +1542,7 @@
     "trezor_support": "Supports Model One or Model T devices.",
     "gridplus_support": "Supports the GridPlus Lattice1 and SafeCards.",
     "gridplus_device_id": "Device ID",
-    "gridplus_device_id_description": "Get your Device ID from Lattice Home.",
+    "gridplus_device_id_description": "Located on device's home screen.",
     "gridplus_connect": "Connect",
     "gridplus_password": "GridPlus Password",
     "gridplus_password_create": "If this is your first time logging in, create a new password.",
@@ -1567,7 +1567,7 @@
     "connect_trezor_title": "Complete your Trezor set up",
     "connect_gridplus_title": "Connect your Lattice1",
     "connect_trezor_description": "Continue to connect your Trezor to Rainbow through the web interface.",
-    "connect_gridplus_description": "Connect your Lattice1 to Rainbow through the connection wizard.",
+    "connect_gridplus_description": "Connect your Lattice1 to Rainbow using the Connection Wizard.",
     "learn_more": "Learn more.",
     "connect_wallets_title": "Connect your wallets",
     "connect_wallets_found": "We’ve found %{count} wallets on your %{vendor} with a balance or activity. Select which to connect.",
