--- a/static/json/languages/en_US.json
+++ b/static/json/languages/en_US.json
@@ -247,6 +247,9 @@
       "clear_transactions_and_nonces_success": "Pending transactions cleared",
       "flashbots_description": "Flashbots protects your transactions and reduces the likelihood of transaction failures."
     },
+    "approvals": {
+      "title": "Approvals"
+    },
     "currency": {
       "title": "Currency",
       "ETH": "Ethereum",
@@ -560,6 +563,34 @@
     "other_wallets": "Other Wallets",
     "no_connections_title": "No connected apps",
     "no_connections_copy": "Websites you connect to will show up here"
+  },
+  "approvals": {
+    "title": "Approvals",
+    "unlimited": "Unlimited",
+    "no_allowance": "No Allowance",
+    "revoke_approval": "Revoke Approval",
+    "copy_spender":"Copy Spender",
+    "spender_address_copied": "Spender Address Copied",
+    "revoked_approvals": "Revoked Approvals",
+    "nothing_found": "Nothing found",
+    "revoke": {
+      "title": "Revoke Approval",
+      "action": "Revoke",
+      "cancel": "Cancel",
+      "allowance": "Allowance",
+      "spender":"Spender",
+      "chain": "Chain"
+    },
+    "token_details": {
+      "explainer": {
+        "token_approval": {
+          "title": "What’s an Approval?",
+          "description_1": "Approvals grant a dApp to spend and transfer tokens or NFTs on your behalf.",
+          "description_2": "It is important to monitor your approvals and revoke unnecessary, broad, or unsafe approvals that may risk your assets.",
+          "action_label":"Got it"
+        }
+      }
+    }
   },
   "send": {
     "title": "Send",
@@ -1226,7 +1257,8 @@
     "exchange_rate": "Exchange",
     "collection": "Collection",
     "token_contract": "Token Contract",
-    "token_standard": "Token Standard"
+    "token_standard": "Token Standard",
+    "revoke_approval":"Revoke Approval"
   },
   "tokens_tab": {
     "coinbase_title": "Deposit from Coinbase",
@@ -1379,7 +1411,8 @@
     "speed_up_cta": "Speed up transaction",
     "speed_up_transaction": "Speed up transaction",
     "close_cta": "Cancel",
-    "handle_copy_title": "Tx Hash Copied"
+    "handle_copy_title": "Tx Hash Copied",
+    "revoke_approval": "Revoke Approval"
   },
   "token_details": {
     "swap": "Swap",
@@ -1593,10 +1626,6 @@
       "highlighted": "Contact Rainbow",
       "after": " to request more."
     }
-  },
-  "approvals": {
-    "unlimited": "Unlimited",
-    "no_allowance": "No Allowance"
   },
   "buy": {
     "title": "Buy",
