--- a/static/json/languages/en_US.json
+++ b/static/json/languages/en_US.json
@@ -1320,7 +1320,9 @@
         "floor_price_title": "Collection floor price",
         "floor_price_action_label": "Got it"
       },
-      "send": "Send"
+      "send": "Send",
+      "view_on_opensea": "View on OpenSea",
+      "view_on_explorer": "View on %{explorerTitle}"
     }
   },
   "points": {
